--- a/themes/finna/less/bootstrap/variables.less
+++ b/themes/finna/less/bootstrap/variables.less
@@ -55,7 +55,9 @@
 
 //== Finna home page
 @introduction-header: 3em;
+@home-content-background: @body-bg; // Add custom background color for home content
 @home-top-background: @brand-third;
+@home-right-top-background: @body-bg; // change the color of right column 
 @home-middle-background: #fff;
 @infobox-background: @brand-third;
 @infobox-border: none;
@@ -723,7 +725,7 @@
 
 @panel-bg:                    #fff;
 @panel-body-padding:          15px;
-@panel-border-radius:         @border-radius-base;
+@panel-border-radius:         0px;
 
 //** Border color for elements within panels
 @panel-inner-border:          #ddd;
